# book-lets-start-coding-py

./: pyproject.toml
en/Chapter 02/: columns.py  dollar_display.py
en/Chapter 06/: add_coffee_record.py  display_file.py  names.txt  read_sales.py  save_emp_records.py  save_running_times.py  search_coffee_records.py  strip_newline.py  write_sales.py
en/Chapter 07/: average_list.py  in_list.py  pie_chart2.py  read_number_list.py  total_list.py  write_number_list.py
en/Chapter 08/: test_averages.py
en/Chapter 10/: contact_manager.py  pickle_cellphone.py
en/Chapter 11/: account demo.py  polymorphism_demo.py  wrong_type.py
en/Chapter 12/: endless_recursion.py  factorial.py  fibonacci.py  gcd.py  recursive.py  towers_of_hanoi.py
en/Chapter 13/: both_internal_and_external_padding.py  draw_arc.py  draw_dashed_square.py  draw_ovals.py  draw_squares.py  draw_text.py  hello_world2.py  hello_world3.py  listbox_example1.py  text_anchors.py  vertical_scrollbar.py  window_with_title.py
exersises/Глава 02/: Упражнение 2.1.py  Упражнение 2.10.py  Упражнение 2.15_эскиз_02.py  Упражнение 2.15_эскиз_05.py  Упражнение 2.15_эскиз_06.py  Упражнение 2.6.py  Упражнение 2.8.py  Упражнение 2.9.py
exersises/Глава 03/: Упражнение 3.1.py  Упражнение 3.11.py  Упражнение 3.12.py  Упражнение 3.15.py  Упражнение 3.18.py  Упражнение 3.19.py  Упражнение 3.2.py  Упражнение 3.3.py  Упражнение 3.5.py  Упражнение 3.7.py  Упражнение 3.9.py
exersises/Глава 04/: Упражнение 4.10.py  Упражнение 4.11.py  Упражнение 4.13.py  Упражнение 4.14.py  Упражнение 4.15.py  Упражнение 4.2.py  (+3 more)
(+507 files in other folders)
