[tool.poetry]
name = "book-py-get-started-prog-python"
version = "0.1.0"
description = "сурсы для книги \"Давайте начинать программировать на Пайтон\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
